Updated patch notes

--- a/index.html
+++ b/index.html
@@ -234,8 +234,70 @@
 
 
 
-
-
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">FujiQ 11/22/2022</small>
+              <p>
+               ===Live Fix===
+               <br>
+               Druid Staff - tooltip now matches requirement (level 105) 
+              </p>
+            </article>
+            <div class="body-line"></div>
+            <article>
+              <small class="article-date">Fujiq 11/20/2022</small>
+              <p>
+               A small patch to address issue with Disruption spell, as well as rebalance of the Scroll quests drop chance/exp reward. A targeting change was reverted and server issue with respawns addressed.
+              </p>
+             ===Spells===
+             <ul>
+              <li>Changed Disruption resist check as it was irresistible <100 mind skill</li>
+              <li>Changed Disruption's silence to 5 seconds instead of 10 seconds</li>
+              <li>Disruption should now message players when the effect wears off</li>
+             </ul>
+             ===Quest===
+             <ul>
+              <li>Restructured drop chances and places to obtain scrolls - now solo drop chance from lvl appropriate mobs rather than placed in tiered loot groups from all creatures with that group
+                <ul>
+                  <li>Problem with Bats</li>
+                  <li>Infestation Black Widow Hatchling</li>
+                  <li>New Bear Skin Rug</li>
+                  <li>My Shadow is Haunting Me</li>
+                  <li>Stop the Greedy Gluttons</li>
+                  <li>Injured Minotaurs Below Chlera</li>
+                  <li>Those evil Shadow Spiders</li>
+                  <li>Rock trolls Near Josdy</li>
+                  <li>Secrets of Vampire Bats</li>
+                  <li>Slay the Sand Golems</li>
+                </ul>
+              </li>
+              <li>Increased exp given fro scrolls quests</li>
+              <li>Set min level req to take scroll quests (except lowest 2 scrolls)</li>
+              <li>Bear Skin Rug scroll quest (for npc "Raff" in LSP) is now functional</li>
+              <li>Added fail conf for marsh dungeon quest where it was missing on stage 8</li>
+              <li>More pointer text in quest npcs on marsh dungeon quest for final stage</li>
+             </ul>
+             ===Crafting===
+             <ul>
+              <li>Elven Tools will increase arrow output by flat quant of 5</li>
+             </ul>
+             ===Creatures===
+             <ul>
+              <li>Removed ability for creatures to spawn followers if they are a follower (Deadwillows, Ice Golem, Golem, Slimes, Skeletal mage)</li>
+              <li>Added solo great light encounter to marsh dungeon and bumped up Great Light chance to spawn in trash chunks w normal marsh lights to help with the spawn</li>
+             </ul>
+             ===The Junk Drawer===
+             <ul>
+              <li>Valinor was missing some music regions on the above ground map on coastlines/pond borders</li>
+              <li>Increased max syllable of each race/gender to 4 from 3 - enjoy longer, more silly names</li>
+              <li>Fix for random name generator - when no names were available had no way to exit and caused server to hang</li>
+              <li>Reverted change to targeting limitation; should not drop target immediately when leaving play area</li>
+              <li>Encounters not recalc/respawning at times and would become empty, then respawn at once and be a world of pain</li>
+             </ul>
+             <p>
+              
+             </p>
+            </article>
             <div class="body-line"></div>
             <article>
               <small class="article-date">FujiQ 11/11/2022</small>
