Updated Grab Bag for DEC

--- a/index.html
+++ b/index.html
@@ -4282,9 +4282,11 @@
                       <div id="december2022" class="panel-collapse collapse">
                         <div class="panel-body accordion-border">
                             <ul class="light-grey-text">
-                                <li></li>
-                                <li></li>
-                                <li></li>
+                                <li>1 Orb Reset</li>
+                                <li>1 City Faction Reset</li>
+                                <li>1 Change your Race and Gender</li>
+                                <li>5 Berserker Potion Packs</li>
+                                <li>3 Summon Corpse</li>
                             </ul>
                         </div>
                       </div>
