--- a/quest.html
+++ b/quest.html
@@ -193,7 +193,7 @@
             <div class="space"></div>
             <h3 id="highlands" class="anchor">Highlands</h3>
             <p>Comeing Soon</p>
-            <button type="button" class="btn btn-dark"><a href="#">Highlands</a></button>
+            <button type="button" class="btn btn-dark"><a href="highlands.html">Highlands</a></button>
 
             <div class="line"></div>
             <h3 id="westernIsles" class="anchor">Western Isles</h3>
