Completed Sweet Relief Quest

--- a/highlands.html
+++ b/highlands.html
@@ -232,7 +232,7 @@
                         </tr>
                         <tr>
                           <td>
-                            Kongodo
+                            Shargar
                           </td>
 
                           <td>
@@ -244,7 +244,7 @@
                     <hr>
                     <p class="clearfix">
                         <img class="npc-img" src="Images/HighLands/Hero_of_Dawat_Shargar.png" alt="Shargar">
-                        <span class="light-red">Shargar:</span> New to Dawat? Be on guard. Strange things northwest of town. New evil cult formed. They stooge around like hyena. look for new followers. always need new blood to replace sacrifices. I ask for your strength now. Young Orcs not care when I ask. They no listen 'til toolate.
+                        <span class="light-red">Shargar:</span> New to Dawat? Be on guard. Strange things northwest of town. New evil cult formed. They stooge around like hyena. Look for new followers. Always need new blood to replace sacrifices. I ask for your strength now. Young Orcs not care when I ask. They no listen 'til too late.
                         <br>
                         <span class="green">Player:</span> <span class="player-text-color"> Yes! I will quell their evil.</span> 
                         <br>
@@ -257,8 +257,8 @@
                       <img class="monster-img" src="Images/NPC/Monsters/Cultist.png" alt="Cultist" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Cultist_Stats.png' alt='Cultist Stats'>">
                       <img class="img-small img-center" src="Images/HighLands/Hero_of_Dawat_Cultists_Location.png" alt="Cultists Location Map">
                       <br>
-                     Head out to the northwest of town to find the <span class="red">Cultist</span> you need to kill. You need to kill them with in the coordinates for them to cout as a kill for Shargar. 
-                     You will be updated as you kill them <span class="green">QUEST UPDATE: You have killed 50 Cultists!</span>
+                     Head out to the northwest of town to find the <span class="red">Cultist</span>. You will need to kill them with in the coordinates for them to cout as a kill for Shargar. 
+                     You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 50 Cultists!</span>
                      When you have killed all 50 you will be updated to return to Shargar.
                      <br>                                           
                      <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
@@ -276,7 +276,7 @@
                       </ul>
                       <hr>  
                     <p>
-                      <span class="light-red">Shargar:</span> I go bragging about you, but learn bad news. cultist not hurting yet. have big bosses. Cult Leaders. they wear purple robes... cut off the head, body falls. All warrior know that. Go seek leaders out.. they near Cultists
+                      <span class="light-red">Shargar:</span> I go bragging about you, but learn bad news. Cultist not hurting yet. Have big bosses, Cult Leaders, they wear purple robes... Cut off the head, body falls. All warrior know that. Go seek leaders out.. They near Cultists
                       <br>
                       <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Kill 75 Cult Leaders for Shargar.</span>
                     </p>
@@ -284,7 +284,7 @@
                     <p class="clearfix">  
                       <img class="monster-img" src="Images/NPC/Monsters/Cult_Leader.png" alt="Cult Leader" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Cultist__Leader_Stats.png' alt='Cultist Leader Stats'>">
                       <br>
-                     Head out to the northwest of town to find the <span class="red">Cultist Leaders</span>. You will be updated as you kill them <span class="green">QUEST UPDATE: You have killed 75 Cult Leaders for Shargar!</span>
+                     Head out to the northwest of town to find the <span class="red">Cultist Leaders</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 75 Cult Leaders for Shargar!</span>
                      When you have killed all 75 you will be updated to return to Shargar.
                      <br>                                           
                      <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
@@ -311,7 +311,7 @@
                       <p class="clearfix">  
                         <img class="monster-img" src="Images/NPC/Monsters/Thief.png" alt="Thief" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Thief_Stats.png' alt='Thief Stats'>">
                         <br>
-                       Head out to the northwest of town to find the warehouse with the <span class="red">Thieves</span>. You will be updated as you kill them <span class="green">QUEST UPDATE: You have killed 100 Thieves for Shargar!</span>
+                       Head out to the northwest of town to find the warehouse with the <span class="red">Thieves</span>. You will be updated as you kill them, <span class="green">QUEST UPDATE: You have killed 100 Thieves for Shargar!</span>
                        When you have killed all 100 you will be updated to return to Shargar.
                        <br>                                           
                        <span class="green">QUEST UPDATE:</span><span class="red"> Hero of Dawat</span><span class="orange">, Return to Shargar in Dawat to collect your reward!</span>
@@ -364,7 +364,7 @@
                 </div>
               </div>
               <!-- End of Hero of Dawat -->
-              <hr>              
+              <div class="line"></div>              
               <!-- Start of Haunted House -->
               <div class="card bg-main half-width mb-5">
                 <div class="card-header">
@@ -403,7 +403,7 @@
                         </tr>
                         <tr>
                           <td>
-                            Kongodo
+                            Dawat Worker
                           </td>
 
                           <td>
@@ -424,7 +424,7 @@
                       <img class="monster-img" src="Images/NPC/Monsters/Ghost.png" alt="Cultist" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Ghost_Stats.png' alt='Ghost Stats'>">
                       <img class="img-small img-center" src="Images/HighLands/Haunted_House.png" alt="Ghost Location Map">
                       <br>
-                     Head north to find the <span class="red">Ghost</span> you need to kill. You need to kill them with in the coordinates for them to cout as a kill for the Dawat Worker. 
+                     Head north to find the <span class="red">Ghost</span>. You will need to kill them with in the coordinates for them to cout as a kill for the Dawat Worker. 
                      You will be updated as you kill them <span class="green">QUEST UPDATE: You have killed 50 Ghost</span>
                      When you have killed all 50 you will be updated to return to the Dawat Worker.
                      <br>                                           
@@ -448,7 +448,132 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Hero of Dawat -->
+              <!-- End of Haunted House -->
+              <div class="line"></div>            
+              <!-- Start of Sweet Relief -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="hauntedHouse" class="anchor text-center">Sweet Relief</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Travel</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Sweetness
+                          </td>
+
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Sweet_Relief_Gloves_of_Sleight.png" alt="" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Sweet_Relief_Gloves_of_Sleight_Stats.png' alt='Gloves of Sleight Stats'>">                        
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Sweet_Relief_Sweetness.png" alt="Rooster Sweetness">
+                        <span class="light-red">Sweetness:</span> Cluck..help...cluck
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> Are you talking to me?</span> 
+                        <br>
+                        <span class="light-red">Sweetness:</span> baKAWK! ..Hel...CUCK!...help me...please! Just hear me out! BAKAWK!
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> How can I help you?</span> 
+                        <br>
+                        <span class="light-red">Sweetness:</span> I need your ...cluck...help. That scum Arvanion in Arda C-c-c-CLUCK!...caught me trying to steal corn...cluck. He had one of his alchemists create a potion that turned me into a rooster!...cluck...I only wanted a little corn;
+                        I was so hungry! I...baKSAWK...manage to escape and made my way here to Dawat..cluck...I've been trying to figure out a way to turn myself back to a human, but no one will listen to me, let alone...cluck..help me. Even the orcs don't pay me any mind. That's probably why 
+                        they haven't tried to eat me; they think a talking rooster is funny... baKAWK!
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> That's harsh punishment for stealing corn.</span> 
+                        <br>
+                        <span class="light-red">Sweetness:</span> That's what I thought!...bawk...But my pleas fell on deaf ears. Now I need someone to help me, act as my emissary...CLUCK!...escuse me. Here's what I need you to do.
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> I'm listening.</span> 
+                        <br>
+                        <span class="light-red">Sweetness:</span> I hear tale of a flower that grows in Parian called a 'Withering Flower'. It has magnificent healing properties. When c-c-c-CLUCK!...cons med, it regenerates the body and the soul. If I could get a potion created from this flower, 
+                        it may turn me back into human. The bad news is I have no idea where to find it. However, the good news is I know someone who may. ... ... ..BAKAWK!... There is a waitress in the tavern named <span class="light-red">Diega</span>. I've heard she used to be quite the alch..alch...alCLUC!...alchemist in 
+                        training, and has knowledge of plants and other ingredients for making potions. She should be able to help you. I would go myself but we've already been over the talking rooster bit. I need you to go for me. Plus, I don't fancy my chances making it to Parian in one piece, 
+                        what with all the nasties out and about. Find Diega at the tavern in Parian..cluck!
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Sweet Relief</span><span class="orange">, Find Diega at the tavern in Parian.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="npc-img" src="Images/HighLands/Sweet_Relief_Diega.png" alt="Diega">
+                      <img class="" src="Images/HighLands/Sweet_Relief_Rose_Location.png" alt="Rose Location" width="250px">
+                      <br>
+                     Follow the road to the east then north back to the west to arrive at Parian. Diega is at location <span class="num-color-teal">1</span> on the above map.
+                     <br> 
+                     <span class="light-red">Diega:</span> What can I do for ya, hon?
+                     <br>
+                     <span class="green">Player:</span> <span class="player-text-color"> A rooster sent me.</span> 
+                     <br>
+                     <span class="light-red">Diega:</span> Him again? What is he trying to get you to fetch for him? Magic corn? A bottle of Magic Ale? I swear, that rooster dupes more fools... Sigh..So, what does he want? Hm? A potion made from a flower? I don't know how many times I have to say, 
+                     'I'm a bartender, not an alchemist'! You know he's just a talking rooster don't you? Every couple weeks he dupes someone into coming to Parian and fetching him something. Usually booze, because he claims it will turn him human. And why he always gripes about Aranion I'll never know. 
+                     I swear that rooster has never even been to Arda... a sucker is born every minute, eh? Whatever. Look I'm really busy right now, so if you want a flower try looking in the garden in the northern part of town. I've got to get to work. If you bring the flower to me, I'll make a 'potion' out of it... sigh.
+                     <br>                                          
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Sweet Relief</span><span class="orange">, Check the garden in northern Parian for the Withering Flower.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      Following the above map the number<span>2</span> location to find the withering flower. <img src="" alt="Withering Flower"> Take the flower, you will be updated to take the flower to Diega.
+                      <br>                                          
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Sweet Relief</span><span class="orange">, Take the flower to Diega.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Diega:</span> Great...you're back...Did you find the flower? Give me a moment and I will grind this up...mix it with a little ale...and a dash of cinnamon. That rooster hates cimmamon. Here you go. And please, for the love of the gods, tell that rooster to stop sending people to pester me while I am working.
+                      <br>
+                      <span class="green">QUEST UPDATE:</span><span class="red"> Sweet Relief</span><span class="orange">, Bring the potion to Sweetness in Dawat.</span>
+                    </p>
+                    <p>
+                      <span class="light-red">Sweetness:</span> BaKAWK! Finally! Did she give you the potion? Give it to me! Gulp...gulp...cluck!..that's good stuff...ECK! Cinammon! I hate cinnamon!...cluck...nice kick to it though.... ... cluck... cluck... Why are you still here? I guess you want something for the trouble?
+                      Let's see what I have lying around here. .. here, I stole these out of some farmer's shed. They look like they will fit you. Now let me enjoy my drink in peace.
+                    </p>
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Gloves of Sleight</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">1,650</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You are given Gloves of Sleight
+                       <br>
+                       Swetness goes back to nursing his drink, oblivious of your presence.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Haunted House -->
 
 
 
