Started Frieds of Earth Quest

--- a/highlands.html
+++ b/highlands.html
@@ -59,6 +59,9 @@
                         <li>
                           <a href="#sweetRelief">Sweet Relief</a>
                         </li>
+                        <li>
+                          <a href="#friendOfTheEarth">Friend of the Earth</a>
+                        </li>
                     </ul>
                 </li>
                 <li>
@@ -114,10 +117,11 @@
                           </li>
                           <!-- accordion-toggle -->
                           <ul id="menu-scroll" class="menu-submenu accordion-content">
-                            <li><a class="head" href="#dawat">Hero of Dawat</a></li>
+                            <li><a class="head" href="#dawat">Dawat</a></li>
                              <li><a class="head" href="#heroOfDawat">Hero of Dawat</a></li>
                              <li><a class="head" href="#hauntedHouse">Haunted House</a></li>
                              <li><a class="head" href="#sweetRelief">Sweet Relief</a></li>
+                             <li><a class="head" href="#friendOfTheEarth">Friend of the Earth</a></li>
                           </ul>
                           <!-- menu-submenu accordon-content-->
                                <li id="nav4" class="toggle accordion-toggle"> 
@@ -650,8 +654,121 @@
                   </div>
                 </div>
               </div>
-              <!-- End of Haunted House -->
+              <!-- End of Sweet Relief -->
+              <div class="line"></div>  
+              <!-- Start of Friend of the Earth -->
+              <div class="card bg-main half-width mb-5">
+                <div class="card-header">
+                  <h2 id="friendOfTheEarth" class="anchor text-center">Friend of the Earth</h2>
+                </div>
+                <div>
+                  <div class="card-body">
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Quest Log</th>
+                          <th>Location</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Highland</td>
+                          <td>Dawat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>Difficulty</th>
+                          <th>Skills</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>Apprentice</td>
+                          <td>Combat</td>                        
+                    </table>
+                    <table class="table table-sm table-bordered text-center">
+                      <thead class="thead-light">
+                        <tr>
+                          <th>NPC Quest Start</th>
+                          <th>Reward</th>
+                        </thead>    
+                        </tr>
+                        <tr>
+                          <td>
+                            Kudah
+                          </td>
 
+                          <td>
+                          <img class="thumbnail-img" src="Images/HighLands/Friend_of_the_Earth_Terra_Gloves.png" alt="Terra Gloves" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Friend_of_the_Earth_Terra_Gloves_Stats.png' alt='Terra Gloves Stats'>">                        
+                          <img class="thumbnail-img" src="Images/HighLands/Friend_of_the_Earth_Terra_Hood.png" alt="Terra Hood" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Friend_of_the_Earth_Terra_Hood_Stats.png' alt='Terra Hood Stats'>"> 
+                          <img class="thumbnail-img" src="Images/HighLands/Friend_of_the_Earth_Terra_Cloak.png" alt="Terra Cloak" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/HighLands/Friend_of_the_Earth_Terra_Cloak_Stats.png' alt='Terra Cloak Stats'>"> 
+                          <br>                        
+                        </td>                        
+                    </table>
+
+                    <hr>
+                    <p class="clearfix">
+                        <img class="npc-img" src="Images/HighLands/Friend_of_the_Earth_Kudah.png" alt="Kudah">
+                        <span class="light-red">Kudah:</span> Kudah welcomes you friend! Kudah friend of earth. Are you friend of earth? 
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> I am a friend of the earth.</span> 
+                        <br>
+                        <span class="light-red">Kudah:</span> Kudah happy to hear that Kudah work with the earth, and earth work with Kudah. The earth grant Kudah special gifts of knowledge. Kudah seek to pass on gifts to friends. Kudah want be shaman, but Kudah need to practice hard. Help Kudah practice knowledge and Kudah pass on gift. 
+                        <br>
+                        <span class="green">Player:</span> <span class="player-text-color"> I will gladly help you Kudah.</span> 
+                        <br>
+                        <span class="light-red">Kudah:</span> Kudah happy again! Kudah work on special garment, make us one with earth. Kudah need help gathering special pieces to make garment, make us one with earth. Kudah need help gathering special pieces to make garment. First Kudah need poison sac from Fire Ant. Fire Ants live near mountain, 
+                        southwest of Kudah. Bring Kudah 1 Poison Sac and be careful. Kudah need Sac intact. 
+                        <br>
+                        <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kudah of Dawat wants you to collect a Poison Sac from Fire Ants.</span>
+                      </p>
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Fire_Ant.png" alt="Fire Ant" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Fire_Ant_Stats.png' alt='Fire Ant Stats'>">
+                      <br>
+                     Head southwest next to the mountain to find the <span class="red">Fire Ants</span>.  
+                     You will be updated as you kill them. <span class="red">You were unable to keep the Poison Sac intact. Keep looking!</span>
+                     When you have succed in keep the Poison Sac intact you will be updated to return to Kudah.
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You found a Poison Sac for Kudah. Return to Dawat.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Kudah:</span> Good work! Now Kudah need 3 Skeleton Toes. Skeletons wander by mountains near Krog. Bring 3 Toes to Kudah.
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Hunt Skeletons that wander the mountains north of Krog to collect 3 Skeleton Toes for Kudah.</span>
+                    </p>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Skeleton.png" alt="Skeleton" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Skeleton_Stats.png' alt='Skeleton Stats'>">
+                      <br>
+                     Head west to the mountain range north of Krog to find the <span class="red">Skeletons</span>.  
+                     You will be updated as you kill them. <span class="green">You found a Skeleton Toe for Kudah!</span>
+                     When you have succed in finding all three you will be updated to return to Kudah.
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You have retrieved 3 Skeleton Toes. Return to Kudah in Dawat.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Kudah:</span> Kudah halfway there. Skeleton Toes prove useful on garment; Kudah grind toes and make fine powder to treat garment. Make garment strong! Now Kudah need you hunt Warg have very large pelt, and Kudah need very large pelt. Warg found all near village, so shouldn't be hard.
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Wargs and collect 1 Very Large Pelt for Kudah.</span>
+                    </p>
+
+
+
+                      <hr>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Rusty Worker's Shovel</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">41,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                      </ul>
+                      <hr>  
+                    <p class="mt-4 py-3 text-center quest-complete">
+                      Quest Complete
+                    </p>
+                       You have banished the ghosts from the guard house.
+                  </div>
+                </div>
+              </div>
+              <!-- End of Friend of the Earth -->
 
 
              
