--- a/highlands.html
+++ b/highlands.html
@@ -752,7 +752,24 @@
                       <br>
                       <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Wargs and collect 1 Very Large Pelt for Kudah.</span>
                     </p>
-
+                      <hr>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Hunt Skeletons that wander the mountains north of Krog to collect 3 Skeleton Toes for Kudah.</span>
+                    </p>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Skeleton.png" alt="Skeleton" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Skeleton_Stats.png' alt='Skeleton Stats'>">
+                      <br>
+                     Head west to the mountain range north of Krog to find the <span class="red">Skeletons</span>.  
+                     You will be updated as you kill them. <span class="green">You found a Skeleton Toe for Kudah!</span>
+                     When you have succed in finding all three you will be updated to return to Kudah.
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You have retrieved 3 Skeleton Toes. Return to Kudah in Dawat.</span>
+                    </p>
+                    <hr>
+                    <p>
+                      <span class="light-red">Kudah:</span> Kudah halfway there. Skeleton Toes prove useful on garment; Kudah grind toes and make fine powder to treat garment. Make garment strong! Now Kudah need you hunt Warg have very large pelt, and Kudah need very large pelt. Warg found all near village, so shouldn't be hard.
+                      <br>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Wargs and collect 1 Very Large Pelt for Kudah.</span>
+                    </p>
 
 
                       <hr>
