--- a/highlands.html
+++ b/highlands.html
@@ -753,35 +753,70 @@
                       <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Wargs and collect 1 Very Large Pelt for Kudah.</span>
                     </p>
                       <hr>
-                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Hunt Skeletons that wander the mountains north of Krog to collect 3 Skeleton Toes for Kudah.</span>
-                    </p>
                     <p class="clearfix">  
-                      <img class="monster-img" src="Images/NPC/Monsters/Skeleton.png" alt="Skeleton" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Skeleton_Stats.png' alt='Skeleton Stats'>">
+                      <img class="monster-img" src="Images/NPC/Monsters/Warg.png" alt="Warg" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Warg_Stats.png' alt='Warg Stats'>">
                       <br>
-                     Head west to the mountain range north of Krog to find the <span class="red">Skeletons</span>.  
-                     You will be updated as you kill them. <span class="green">You found a Skeleton Toe for Kudah!</span>
-                     When you have succed in finding all three you will be updated to return to Kudah.
+                     Head southwest to the mountain range find the <span class="red">Wargs</span>.  
+                     You will be updated as you kill them. <span class="red">The Warg pelt is not suitable for Kudah. Find Another!</span>
+                     When you have succed in finding the correct warg pelt you will be updated to return to Kudah.
                      <br>                                           
-                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You have retrieved 3 Skeleton Toes. Return to Kudah in Dawat.</span>
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You found a very Large Pelt for Kudah. Return to Dawat!</span>
                     </p>
                     <hr>
                     <p>
-                      <span class="light-red">Kudah:</span> Kudah halfway there. Skeleton Toes prove useful on garment; Kudah grind toes and make fine powder to treat garment. Make garment strong! Now Kudah need you hunt Warg have very large pelt, and Kudah need very large pelt. Warg found all near village, so shouldn't be hard.
+                      <span class="light-red">Kudah:</span> Kudah almost done, but need one last thing. All pieces together, but now Kudah need earthly spirit to bring everything together. Kudah not true Shaman, so Kudah no have spirit.
+                      Goblin Mystic true Shaman, so Goblin Mystic carry spirit. Kill Mystic, bring Kudah Earthly Essence from Mystic! Mystic found near nasty Goblin Lake. Be careful.
                       <br>
-                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Wargs and collect 1 Very Large Pelt for Kudah.</span>
+                      <span class="green">QUEST RECEIVED:</span><span class="red"> Friend of the Earth</span><span class="orange">, Kill Goblin Mystics and collect 1 Earthly Essence for Kudah..</span>
                     </p>
-
+                    <hr>
+                    <p class="clearfix">  
+                      <img class="monster-img" src="Images/NPC/Monsters/Goblin_Mystic.png" alt="Goblin Mystic" tabindex="0" data-container="body" data-toggle="popover" data-trigger="focus" data-placement="bottom" data-html="true" data-content="<img class='popover-img' src='Images/NPC/Monsters/Goblin_Mystic_Stats.png' alt='Goblin Mystic Stats'>">
+                      <br>
+                     Head west to Goblin Lake west of Krog to find the <span class="red">Goblin Mystics</span>.  
+                     You will be updated as you kill them. <span class="red">You were unable to trap the Earthly Essence from the Mystic. Keep trying!</span>
+                     When you have succed in trapping the Earthly Essence you will be updated to return to Kudah.
+                     <br>                                           
+                     <span class="green">QUEST UPDATE:</span><span class="red"> Friend of the Earth</span><span class="orange">, You found an Earthly Essence for Kudah. Return to Dawat!</span>
+                    </p>
+                    <p>
+                      <span class="light-red">Kudah:</span> This should be all Kudah needs! Huh...ooogh! Kudah have more pieces than need. Kudah can make different garment for you Kudah need the practice. What you want Kudah to make?
+                      <br>
+                      <hr>
+                      <strong class="light-blue">OPTION: 1</strong>
+                      <br>
+                      <span class="green">Player:</span> <span class="player-text-color"> I would really like a nice pair of gloves!</span> 
+                      <br>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Terra Gloves</span></li>
+                      </ul>
+                      <hr>
+                      <strong class="light-blue">OPTION: 2</strong>
+                      <br>
+                      <span class="green">Player:</span> <span class="player-text-color"> An adventurer could always use a nice hood to stay warm!</span> 
+                      <br>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Terra Hood</span></li>
+                      </ul>
+                      <hr>
+                      <strong class="light-blue">OPTION: 3</strong>
+                      <br>
+                      <span class="green">Player:</span> <span class="player-text-color"> A nice cloak would be a great gift!</span> 
+                      <br>
+                      <ul>
+                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Terra Cloak</span></li>
+                      </ul>
+                    </p>
 
                       <hr>
                       <ul>
-                        <li><i class="fas fa-caret-right"></i><span class="ml-2 green">ITEM RECEIVED: Rusty Worker's Shovel</span></li>
-                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">41,250</strong> Experience Pool <span class="light-red">experience may very</span></li>
+                        <li><i class="fas fa-caret-right"></i><strong class="ml-2 light-blue">8,750</strong> Experience Pool <span class="light-red">experience may very</span></li>
                       </ul>
                       <hr>  
                     <p class="mt-4 py-3 text-center quest-complete">
                       Quest Complete
                     </p>
-                       You have banished the ghosts from the guard house.
+                       Kudah made a garment of the earth for you
                   </div>
                 </div>
               </div>
